Change one, remove one

--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,12 @@ ul {
 a.active {
   display: none;
 }
+
+input, label {
+  display: block;
+  margin: 1rem auto;
+}
+
+button {
+  margin: 1rem;
+}
